fixed alignment issues on movie details page.

--- a/tv-app/src/Components/App/App.css
+++ b/tv-app/src/Components/App/App.css
@@ -86,16 +86,6 @@ nav {
   margin: 2px 2px;
 }
 
-/* .Search {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 5px;
-  font-size: 16px;
-} */
-
 .Search input[type="text"] {
   height: 3em;
   width: 85vw;
